resolve merge conflicts